--- a/김연우.html
+++ b/김연우.html
@@ -1,11 +1,11 @@
 <!doctype html>
 <html>
 <head>
-<title> 기범 </title>
+<title> 김연우 </title>
 <meta charset="utf-8">
 </head>
 <body>
-  <h1><a href="가수.html"> 가수 </a> </h1>
+  <h1><a href="index.html"> 가수 </a> </h1>
 <ol>
   <li><a href="나얼.html"> 나얼 </a> </li>
   <li><a href="넬.html"> 넬 </a> </li>
