--- a/index.html
+++ b/index.html
@@ -12,14 +12,40 @@
 </script>
 <title> 가수 </title>
 <meta charset="utf-8">
+<style>
+a {
+  color : gray;
+  text-decoration: none;
+}
+#kb {
+  color : blue;
+}
+.kibum {
+  color : red;
+}
+h1 {
+ font-size : 50px;
+ text-align: center;
+}
+</style>
+
 </head>
 <body>
   <h1><a href="index.html"> 가수 </a> </h1>
 <ol>
-  <li><a href="나얼.html"> 나얼 </a> </li>
-  <li><a href="넬.html"> 넬 </a> </li>
+  <li><a href="나얼.html"  class="kibum"> 나얼 </a> </li>
+  <li><a href="넬.html" class="kibum" id=kb> 넬 </a> </li>
   <li><a href="김연우.html"> 김연우 </a> </li>
   </ol>
+
+<!--
+  <h1><a href="index.html"> <font color=gray>가수</font> </a> </h1>
+<ol>
+  <li><a href="나얼.html"> <font color=gray>나얼</font> </a> </li>
+  <li><a href="넬.html"> <font color=gray>넬 </font></a> </li>
+  <li><a href="김연우.html"> <font color=gray>김연우</font> </a> </li>
+  </ol>
+-->
 
 <h3> 가수 </h3> <p> 내가 좋아하는 가수들의 목차 </p>
 <!--Start of Tawk.to Script-->
